# dpm

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh
.github/workflows/: release.yml
cmd/dpm/: embedded.go  main.go
cmd/sync-index/: main.go
internal/adapter/: adapter.go  base.go  base_unix.go  factory.go  factory_other.go  linux.go  macos.go
internal/catalog/: catalog.go  loader.go
internal/dotfiles/: apply.go  detect.go  dotfiles.go  plan.go
internal/engine/: engine.go  extra.go  types.go
internal/installer/: apt.go  archive.go  brew.go  cargo.go  exec.go  http.go  pip.go  resolver.go
internal/metadata/: store.go
internal/profiles/: profiles.go
internal/search/: fetch.go  index.go  search.go
internal/search/data/: snapshot.json
internal/serve/: serve.go  serve_test.go
internal/settings/: settings.go
internal/util/: strings.go
scripts/: install.sh  menu.sh
tui/: Cargo.toml
tui/.cargo/: config.toml
tui/src/: app.rs  event.rs  main.rs
tui/src/rpc/: client.rs  mod.rs  types.rs
tui/src/ui/: breadcrumb.rs  bubble.rs  cart.rs  doctor.rs  dotfiles.rs  footer.rs  header.rs  help.rs  import.rs  installed.rs  menu.rs  mod.rs  packages.rs  popup.rs  profiles.rs  search.rs  settings.rs  tabs.rs  theme.rs  update.rs
