[package]
name = "dpm-tui"
version = "0.51.0"
edition = "2021"
description = "Ratatui frontend for dpm — talks to `dpm serve --stdio` over JSON-RPC"

[[bin]]
name = "dpm-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
